--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - SECRET_KEY=dummy
   - DB_PASSWORD=
   - DB_USER=postgres
-  - DEPLOYMENT=cmc
+  - DEPLOYMENT=verzoeken
 
 install:
   - pip install -r requirements/ci.txt
@@ -48,6 +48,31 @@ jobs:
         - pip install black
       before_script: skip
       script: black --check src --diff
+
+    - name: "Docker image build"
+      before_install: skip
+      install: skip
+      before_script: skip
+      script: docker build .
+
+    - stage: "Publication"
+      name: "Docker image"
+      if: fork = false
+      before_install: skip
+      install: skip
+      before_script: skip
+      script: echo "noop"
+      after_success: echo "trigger deploy?"
+      deploy:
+        - provider: script
+          script: bin/release_docker_image.sh latest
+          on:
+            branch: master
+
+        - provider: script
+          script: bin/release_docker_image.sh $TRAVIS_TAG
+          on:
+            tags: true
 
 after_success:
   - codecov
