--- a/bin/docker-compose.override.yml
+++ b/bin/docker-compose.override.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ${WORKSPACE}/reports:/app/reports
     environment:
-      - DJANGO_SETTINGS_MODULE=verzoeken.conf.jenkins
+      - DJANGO_SETTINGS_MODULE=verzoeken.conf.ci
       - SECRET_KEY=jenkins
       - DB_NAME=postgres
       - DB_USER=postgres
