--- a/requirements/testing.in
+++ b/requirements/testing.in
@@ -1,6 +1,7 @@
 # Shared between dev and jenkins requirements to run our tests
 black
 coverage
+dataclasses==0.6
 django-webtest
 factory_boy
 freezegun
